# RA4_MORSE

./: .gitignore  ARVORE_ATRIBUIDA.md  CMakeLists.txt  GRAMATICA.md  README.md  REGRAS_TIPOS.md  TABELA_SIMBOLOS.md  ast_atribuida.json  ast_inicial.json  ast_saida.json  saida.elf  saida.hex  saida.s  tokens.txt
include/: armv7_generator.hpp  ast.hpp  ast_exporter.hpp  cli_controller.hpp  fsm_scanner.hpp  gramatica.hpp  hex_emitter.hpp  parser.hpp  semantic_analyzer.hpp  testes.hpp  tokens.hpp
src/: armv7_generator.cpp  cli_controller.cpp  fsm_scanner.cpp  gramatica.cpp  hex_emitter.cpp  main.cpp  parser.cpp  semantic_analyzer.cpp
tests/: franco_morse.txt  lucas_morse.txt  mello_morse.txt  piscar.txt  teste1.txt  teste2.txt  teste3.txt  teste4.txt  teste_comentario.txt  teste_erro_lexico.txt  teste_erro_multiplo.txt  teste_erro_semantico.txt  teste_erro_sintatico.txt  teste_morse.txt  teste_write.txt  vai_e_vem.txt
